--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,7 @@ h1 {
 .photograph-header div h2 {
   color: #d3573c;
   font-size: 36px;
+  font-weight: 400;
 }
 
 .photographer_section article h3,
