--- a/css/photographer.css
+++ b/css/photographer.css
@@ -85,7 +85,7 @@ select option:hover, select option:active{
 } */
 
 select:focus > option:checked { 
-  background: rgb(14, 221, 31) !important;
+  background: rgb(223, 111, 111) !important;
 }
 
 .container-filters {
@@ -137,11 +137,14 @@ select:focus > option:checked {
   overflow: hidden;
 }
 
+.bloc-img {
+  position: relative;
+}
+
 .bloc-img button {
   width: 100%;
   height: 100%;
   border: none;
-  position: relative;
   cursor: zoom-in;
 }
 
@@ -216,15 +219,21 @@ select:focus > option:checked {
 .btn-modal {
   background-color: transparent;
   border: none;
+  outline: none;
 }
 
 
 .arrow-video {
-  transform: scale(0.4);
-  background-color: transparent;
   position: absolute;
+  top: 20px ;
+  right: -15px;
+  transform: translate(-50%,-50%) !important;
   object-fit: none !important; 
-  opacity: 0.9;
+  width: 35px !important;
+  height: 35px !important;
+  /* filter: drop-shadow(rgba(0, 0, 0, 0.18) 0px 2px 1px); */
+  object-fit: contain !important;
+  opacity: 1;
 }
 
 
@@ -282,7 +291,7 @@ select:focus > option:checked {
 
 #contact_modal {
   position: fixed;
-  
+  z-index: 1000;
   height: 100vh;
   width: 100%;
   top: 0;
@@ -290,7 +299,6 @@ select:focus > option:checked {
   display: none;
   justify-content: center;
   align-items: center;
-  /* transform: translate(-50%, -50%); */
 }
 
 .modal {
